# muir-woods-mystery

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/detective/: config.py  main.py
src/detective/agents/: lestrade.py
src/detective/agents/lestrade/: lestrade_chat.py
src/detective/case/muir_woods/: about.py  geography.py  lestrade.py  news.py  submit_findings.py  surroundings.py  victim_profiles.py
src/detective/case/muir_woods/victims/: arthur.py  daniel.py  marco.py  melanie.py  sarah.py  tony_berg.py  tony_blake.py
src/detective/data/muir_woods_geography/: correct_responses_to_muir.csv  corte_madera_boundary.json  larkspur_boundary.json  mill_valley_boundary.json  muir_woods_boundary.json  sausalito_boundary.json  victim_sites.py  victims.py
src/detective/docs/muir_woods/: about.md  arthur.md  daniel.md  geography.md  marco.md  melanie.md  sarah.md  surroundings.md  tony_bergenthal.md  tony_blake.md
src/detective/docs/muir_woods/news/: florida.md  internet_troll.md  startup.md
src/detective/utils/: openai.py
